Fixes for iphone jumpy campground ground selection

--- a/parkstay/static/ps/css/search_avail.css
+++ b/parkstay/static/ps/css/search_avail.css
@@ -277,3 +277,14 @@
    font-size: 12px; 
    color: red;
 }
+
+
+@media (max-width: 600px) {
+    .slider-card-thumbnail { 
+        min-height: 200px;
+    }
+    .slick-slide-card {
+        min-height: 280px;
+    }
+}
+  
